# opensource-intern

./: .gitignore  README.en.md  README.md
cargo-sbom/: Cargo.toml
dagrs/: .gitignore  Cargo.toml  README.md
dagrs/doc/: doc.md
dagrs/src/: _main.rs  dag_engine.rs  error_handler.rs  graph.rs  lib.rs  main.rs  task.rs
dagrs/test/: test2.yaml  test4.yaml  test_dag.yaml  test_dag1.yaml  test_dag2.yaml  test_error1.yaml  test_error2.yaml  test_error3.yaml  test_loop1.yaml  test_loop2.yaml
deno/: README.md  deno.spec
docker4secgear/: README.md
docker4secgear/docker/: create.sh  image.sh
dockyard/: README.md
dockyard/conformance/: 1  config  junit.xml  report.html  result.txt  unconfig
mail2list/: README.md  dockerfile  redeme.md
mail2list/db/: mail_list.sql
mail2list/mail2list_backend/: Cargo.toml  dockerfile
mail2list/vue-mail2list-web/: dockerfile  nginx.conf  vue.config.js
mdbook-pdf/: Cargo.toml  README.md
mdbook-pdf/headless_chrome/src/browser/: mod.rs
mdbook-pdf/headless_chrome/src/browser/tab/: mod.rs
mdbook-pdf/headless_chrome/src/browser/transport/: mod.rs
mdbook-pdf/src/: main.rs
mdbook-pdf/test_doc/: book.toml
mdbook2pdf/: Cargo.toml
nx-desktop/: install-kde.sh  install-nx-desktop.sh  speclog
nx-desktop/SPECS/: applet-window-buttons.spec  appstream.spec  bluedevil.spec  botan2.spec  cln.spec  dejavu-fonts.spec  gpsd.spec  grub2-theme-nitrux.spec  kactivitymanagerd.spec  kde-cli-tools.spec  kde-gtk-config.spec  kde-settings.spec  kdeplasma-addons.spec  kf5-baloo.spec  kf5-kactivities-stats.spec  kf5-kdnssd.spec  kf5-kfilemetadata.spec  kf5-kholidays.spec  kf5-khtml.spec  kf5-kjs.spec  kf5-kjsembed.spec  kf5-knotifyconfig.spec  kf5-kpeople.spec  kf5-kross.spec  kf5-krunner.spec  kf5-ktexteditor.spec  kf5-kxmlrpcclient.spec  kf5-modemmanager-qt.spec  kf5-networkmanager-qt.spec  kf5-plasma.spec  kf5-prison.spec  kf5-threadweaver.spec  khotkeys.spec  kio-extras.spec  kmenuedit.spec  kscreen.spec  ksysguard.spec  kwrited.spec  latte-dock.spec  libbsd.spec  (+37 more)
nx-desktop/SRPMS/: applet-window-buttons-0.9.0-3.src.rpm  appstream-0.11.8-1.src.rpm  bluedevil-5.15.5-1.src.rpm  cln-1.3.4-1.src.rpm  grub2-theme-nitrux-3.9.6-1.src.rpm  kactivitymanagerd-5.15.5-1.src.rpm  kde-cli-tools-5.15.5-1.src.rpm  kde-gtk-config-5.15.5-1.src.rpm  kde-settings-30.0-1.src.rpm  kdeplasma-addons-5.15.5-1.src.rpm  kf5-baloo-5.55.0-1.src.rpm  kf5-kactivities-stats-5.55.0-1.src.rpm  kf5-kdnssd-5.55.0-1.src.rpm  kf5-kfilemetadata-5.55.0-1.src.rpm  kf5-kholidays-5.55.0-1.src.rpm  kf5-khtml-5.55.0-1.src.rpm  kf5-kjs-5.55.0-1.src.rpm  kf5-kjsembed-5.55.0-1.src.rpm  kf5-knotifyconfig-5.55.0-1.src.rpm  kf5-kpeople-5.55.0-1.src.rpm  kf5-kross-5.55.0-1.src.rpm  kf5-krunner-5.55.0-1.src.rpm  kf5-ktexteditor-5.55.0-1.src.rpm  kf5-kxmlrpcclient-5.55.0-1.src.rpm  kf5-modemmanager-qt-5.55.0-1.src.rpm  kf5-networkmanager-qt-5.55.0-1.src.rpm  kf5-prison-5.55.0-1.src.rpm  kf5-threadweaver-5.55.0-1.src.rpm  khotkeys-5.15.5-1.src.rpm  kio-extras-19.04.3-1.src.rpm  kmenuedit-5.15.5-1.src.rpm  kscreen-5.14.5-1.src.rpm  ksysguard-5.15.5-1.src.rpm  kwrited-5.15.5-1.src.rpm  latte-dock-0.10.7-1.src.rpm  libbsd-0.9.1-4.src.rpm  libdmtx-0.7.5-4.src.rpm  libksysguard-5.15.5-1.src.rpm  libqalculate-3.6.0-1.src.rpm  luv-icon-theme-3.9.6-1.src.rpm  (+29 more)
nx-desktop/compiled/: applet-window-buttons-0.9.0-3.x86_64.rpm  bluedevil-5.15.5-1.x86_64.rpm  bluedevil-debugsource-5.15.5-1.x86_64.rpm  cln-1.3.4-1.x86_64.rpm  cln-debugsource-1.3.4-1.x86_64.rpm  cln-devel-1.3.4-1.x86_64.rpm  (+231 more)
ocs/: .dockerignore  .env  .gitignore  Cargo.toml  README.md  netlify.toml
ocs/debian/: Dockerfile
ocs/openeuler/: Dockerfile
ocs/src/: config.rs  error.rs  main.rs  response.rs
ocs/src/handler/: mod.rs  staticHandler.rs
pijul-1.0.0~beta.2/: README.md  pijul.spec
pipy/: README.md  pipy.spec
purl/: Cargo.toml  cangkulist.txt
purl/purl/: list.txt  (+22 more)
rcounts/: Cargo.toml  README.md
rdiff/: Cargo.toml
rdnf/: Cargo.toml  README.md  build.rs
rdnf/rpm-sys/: Cargo.toml  build.rs
rdnf/rpm-sys/src/: lib.rs
rdnf/solv-sys/: Cargo.toml  build.rs
rdnf/src/: cli.rs  conf.rs  default.rs  errors.rs  goal.rs  gpgcheck.rs  history.rs  i18n.rs  lock.rs  main.rs  metalink.rs  output.rs  pkgutils.rs  repomd.rs  rpm_trans.rs  utils.rs
rdnf/src/c_lib/: mod.rs  queue_static.c  rpm_trans.c
rdnf/src/solv/: mod.rs  rdnf_pkg.rs  rdnf_query.rs  rdnf_repo.rs  sack.rs
rdnf/src/sub_command/: cache.rs  info.rs  install.rs  mod.rs  repo.rs  repoutils.rs  search.rs  update.rs
rp/: .gitignore  Cargo.toml
rpmust/: .gitignore  Cargo.toml  RPMPackageMetadata.yaml  out.cpio
rpmust/src/: main.rs
rpmust/src/headers/: errors.rs  header.rs  lead.rs  mod.rs
rpmust/src/rpm/: mod.rs  rpmmeta.rs
rpmust/src/rpm/headers/: constants.rs  errors.rs  header.rs  lead.rs  mod.rs
rpmust/src/test/: BackupPC-4.4.0-6.fc36.x86_64.rpm  SDL-1.2.14-7.el6_7.1.i686.rpm  alsa-lib-1.2.3-1.oe1.src.rpm  apr-1.7.0-2.oe1.src.rpm  bzip2-1.0.6-lp150.4.6.1.x86_64.rpm  bzip2-1.0.8-150400.1.77.aarch64.rpm  bzip2-1.0.8-2.fc32.ppc64le.rpm  bzip2-1.0.8-2.fc32.s390x.rpm  bzip2-1.0.8-2.fc32.x86_64.rpm  bzip2-1.0.8-2.mga8.i586.rpm  bzip2-1.0.8-9.fc35.armv7hl.rpm  centos-release-samba412-1.0-1.el8.noarch.rpm  git-daemon-1.7.1-8.el6.x86_64.rpm  jikes-1.23-0.20050308.14-omv4050.x86_64.rpm  libucil-0.9.10-7.el7.aarch64.rpm  qt-mysql-4.8.7-67.fc36.i686.rpm  stratovirt.rpm
rust-dnf/: .gitignore  Cargo.toml
rust-solv/: Cargo.toml  README.md
rust-solv/src/: config.rs  lib.rs  main.rs  repo.rs  repomd.rs  solve.rs  version.rs  yum.rs
rust-solv/tests/: dependency-unsatisfied.xml  integration_test.rs  satisfied.xml  version-unsatisfied.xml
specdiff/: Cargo.toml  README.md
specdiff/examples/: similar_udiff.rs
specdiff/src/: error.rs  lib.rs  main.rs
specdiff/tests/: integration_test.rs
specdiff/tests/common/: mod.rs
sync4src/: Cargo.toml  README.md  config.yaml
sync4src/src/: conf.rs  main.rs  sync.rs
uutils/: README.md  uutils-coreutils-0.0.14-1.src.rpm  uutils-coreutils.spec
youki/: README.md  youki-0.0.2-1.x86_64.rpm  youki.spec
zerotrust/: env.sh
(+197 files in other folders)
