[package]
name = "mdbook-pdf"
version = "0.1.0"
authors = ["jiangsonglin2 <songlin@isrc.iscas.ac.cn>"]
edition = "2021"
description = "A backend for mdBook written in Rust for generating PDF based on headless chrome and Chrome DevTools Protocol"
license-file = "LICENSE"
repository = "https://github.com/HollowMan6/mdbook-pdf"
keywords = ["book", "mdbook", "rustbook", "pdf"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { path = "headless_chrome", version = "0.9.0" }
mdbook = "0.4.15"
serde = "1.0.134"
serde_derive = "1.0.134"
