[package]
name = "rpmust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.11", features = ["fs", "io-util"]}
thiserror = "1"
nom = "7"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
enum-primitive-derive = "0.2"
enum-display-derive = "0.1"
cpio = "0.2"
# consider migrating to flate2
libflate = "1"
sha2 = "0.9"
md-5 = "0.9"
sha1 = "0.6"
rand = { version = "0.8" }
pgp = { version="0.7.2", optional = true }
chrono = "0.4"
log = "0.4"
itertools = "0.10"
hex = { version = "0.4", features = ["std"] }
zstd = "0.9.0"