[package]
name = "rpmust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.11", features = ["fs", "io-util"]}
thiserror = "1"
nom = "7"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
enum-primitive-derive = "0.2"
enum-display-derive = "0.1"
cpio = "0.2"
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"