[package]
name = "rpmust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.11", features = ["fs", "io-util"]}
thiserror = "1"
nom = "7"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4"
enum-primitive-derive = "0.2"
enum-display-derive = "0.1"
cpio = "0.2"
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bzip2 = { version = "0.4", features = ["tokio"] }
flate2 = { version = "1.0.22", features = ["tokio"] }
tar = "0.4.38"
xz = { version = "0.1", features = ["tokio"] }
zstd = "0.10.0"
cpio_reader = "0.1.0"
