[package]
name = "rust-solv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23.0", features = ["serialize"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
flate2 = "1.0.24"
configparser = { version = "3.0.0", features = ["indexmap"] }
varisat = "0.2.2"
indexmap = "1.9.1"