[package]
name = "specdiff"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
reqwest = "0.11.9"
similar = {version = "2.1.0", features = ["bytes", "inline"] }
markdown-gen = "1.2.1"
colored = "2.0.0"
console = "0.15.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
chrono = "0.4"