[package]
name = "sync4src"
version = "0.1.0"
edition = "2021"
authors = ["Hengke Sun <sunhengke@sjtu.edu.cn>"]
description = "A utility to sync between two repositories"
readme= "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
config = { version = "0.13.2", features = ["yaml"], default-features = false }
git2 = "0.15.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
